--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
     "email": "gabadesenvolvedor@gmail.com"
   },
   "scripts": {
-    "dev": "nodemon ./example/index.js"
+    "dev": "node -r sucrase/register/js example/index.js"
   },
   "license": "MIT",
-  "dependencies": {
-    "nodemon": "^2.0.7",
-    "p-queue": "^7.1.0",
-    "sucrase": "^3.17.1"
-  },
   "devDependencies": {
+    "sucrase": "^3.17.1",
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
